--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,10 @@
+[user]
+    name = Frank Rowe
+    email = fsrowe@gmail.com
+
+[github]
+    user = frankrowe
+
 [alias]
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
